# mpc_pendulum

./: CMakeLists.txt  README.md  package.xml
lib/: compile.bash  nlpsol_swingup.c  swingup.ipynb
src/: do_experiment_node.cpp
